# hi5py

./: .gitattributes  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
doc/source/: conf.py  index.rst
hi5py/: __init__.py  _from_file.py  _from_h5py.py  _to_file.py  _to_h5py.py  _types.py  _version.py  lib.py
hi5py/_from_file/: _001.py  __init__.py  _from_file.py  _lib.py
test/: __init__.py  conftest.py  test_containers.py  test_from_file.py  test_lists.py  test_numpy.py  test_pickle.py  test_scalars.py  test_to_file.py  test_tuple.py  test_tuples.py
test/test_numpy/: test_numeric.py
