[options]
packages = find:
install_requires =
    h5py>=3.0.0
python_requires = >=3.7.1
include_package_data = True
zip_safe = False

[options.packages.find]
include = hi5py, hi5py.*

[isort]
sections = FUTURE,STDLIB,THIRDPARTY
profile = black
combine_as_imports = True
line_length = 80
force_grid_wrap = True
force_sort_within_sections = True
