[metadata]
name = hi5py
url = https://github.com/EmilianoJordan/hi5py
project_urls =
    Bug Tracker = https://github.com/EmilianoJordan/hi5py/issues
    ;  CI: GitHub = https://github.com/EmilianoJordan/hi5py/actions
    Source Code = https://github.com/EmilianoJordan/hi5py
description =
    An implementation of the h5py library for common Python data structures.
long_description = file: README.md
long_description_content_type = text/markdown
author = Emiliano Jordan
author_email = emiliano.jordan+hi5py@protonmail.com
maintainer = Emiliano Jordan
maintainer_email = emiliano.jordan+hi5py@protonmail.com
license = MPL 2.0
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python
keywords =
    hi5py
    h5py
    Python
    hdf5
    h5
    File
    IO

[options]
packages = find:
install_requires =
    h5py>=3.0.0
    typing_extensions
python_requires = >=3.7.1
include_package_data = True
zip_safe = False

[options.packages.find]
include = hi5py, hi5py.*

[isort]
sections = FUTURE,STDLIB,THIRDPARTY, FIRSTPARTY, LOCALFOLDER
profile = black
force_grid_wrap = True
force_sort_within_sections = True
combine_as_imports = True

[flake8]
max-line-length = 88